--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p style="text-align: center; margin-bottom: 30px;">The Premier <span class="accent-red">Magic: The Gathering</span> Cube Event in <span class="accent-blue">Washington DC</span></p>
         </div>
         <div class="disclaimer">
-            <p style="text-align: center;">More details to follow...</p>
+            <p style="text-align: center;">Capitol Cube Championship is an annual Cube tournament in Washington, DC, that aims to grow the DC-area Cube community and raise money for charity.</p>
         </div>
         <div class="footer">
             <p>Organized by Capitol Cube LLC, an organization currently awaiting an IRS decision on whether we can be a 501(c)(3) nonprofit. :)</p>
